# Diplom

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/analyzers/: AudioAnalyzer.cpp  AudioAnalyzer.h  BaseAnalyzer.cpp  BaseAnalyzer.h  DocxAnalyzer.cpp  DocxAnalyzer.h  Filemetadata.h  JpegAnalyzer.cpp  JpegAnalyzer.h  PdfAnalyzer.cpp  PdfAnalyzer.h
src/utils/: Hash.cpp  JsonPrinter.h
